[project]
name = "nex"
version = "1.0.6"
authors = [{ name="Alex Kirillov", email="alex@neuroexplorer.com" },]
description = "Run NeuroExplorer Python scripts and read and write .nex and .nex5 files in any Python development environment (VS Code, Spyder, etc.)."
keywords = ["NeuroExplorer", "nex", "nex5", "VS Code"]
readme ={file = 'README.md', content-type='text/markdown'}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    ]
dependencies = ["numpy",]


[project.urls]
homepage = "https://github.com/NeuroExplorer/nex-Python-package"
documentation = "https://www.neuroexplorer.com/docs/reference/scripting/index.html"
repository = "https://github.com/NeuroExplorer/nex-Python-package"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
